--- a/index.html
+++ b/index.html
@@ -426,8 +426,8 @@
 							<span class="disk"></span>
 						</div><!-- END ALBUM ICON -->
 						<div class="name">
-							<h3>Noon Xoxo</h3>
-							<p>Chillout</p>
+							<h3>Swapner Avashe</h3>
+							<p>Rabindro Sangeet</p>
 						</div><!-- end name -->
 					</li>
 
@@ -441,8 +441,8 @@
 							<span class="disk"></span>
 						</div>
 						<div class="name">
-							<h3>Stunt Vibe</h3>
-							<p>Chillout</p>
+							<h3>Bijon Batayone</h3>
+							<p>Rabindro Sangeet</p>
 						</div>
 					</li>
 					<li class="col-md-3 col-sm-3 col-xs-12">
@@ -455,8 +455,8 @@
 							<span class="disk"></span>
 						</div>
 						<div class="name">
-							<h3>Strange Clouds</h3>
-							<p>Chillout</p>
+							<h3>Anonto Gogone</h3>
+							<p>Rabindro Sangeet</p>
 						</div>
 					</li>
 					<li class="col-md-3 col-sm-3 col-xs-12">
@@ -469,8 +469,8 @@
 							<span class="disk"></span>
 						</div>
 						<div class="name">
-							<h3>Natural Earth</h3>
-							<p>Chillout</p>
+							<h3>Swapno Charini</h3>
+							<p>Rabindro Sangeet</p>
 						</div>
 					</li>
 				</ul>
@@ -488,7 +488,7 @@
 			<div class="row">
 				<div class="sectionTitle">
 					<span class="heading-t3"></span>
-					<h2><a href="video.html">Upload Video</a></h2>
+					<h2><a href="video.html">Music Video's</a></h2>
 					<span class="heading-b3"></span>
 					<p>Check out my latest videos and follow me on <a
 							href="https://www.youtube.com/c/RezwanaChoudhuryBannyaOfficial/featured">Youtube</a> to
